[package]
name = "file_system" # the name of the package
version = "0.2.0"    # the current version, obeying semver
authors = ["Joel Overbeck"]


[lib]


[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
text_manipulation = { path = "../text_manipulation" }
