
[package]
name = "gym" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Joel Overbeck"]


[dependencies]
neural_networks = { path = "../neural_networks" }
randomization = { path = "../randomization" }
file_system = { path = "../file_system" }
geometry = { path = "../geometry" }
user_interface = { path = "../user_interface" }
chrono = "0.4"
png_encode_mini = "0.1.2"
close-file = "0.1.0"
serde = { version = "1.0.115", features = ["derive"] }