[package]
name = "training" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Joel Overbeck"]


[dependencies]
neural_networks = { path = "../neural_networks" }
randomization = { path = "../randomization" }
user_interface = { path = "../user_interface" }
gym = { path = "../gym" }
file_system = { path = "../file_system" }
png_encode_mini = "0.1.2"
chrono = "0.4"